[package]
name = "vep"
version = "1.0.0"
authors = ["just-do-halee <just.do.halee@gmail.com>"]
homepage = "https://github.com/just-do-halee/vep"
repository = "https://github.com/just-do-halee/vep"

description = "Variable-length Expansion Pass function. ( i.e. short password to long hashed password )"

readme = "README.md"

keywords = ["algorithms", "cryptography", "password", "expansion"]
categories = ["cryptography", "algorithms", "no-std"]

license = "MIT OR Apache-2.0"
edition = "2018"

[features]
default = ["std"]
std = []

[dependencies]
digest = "0.9.0"
typenum = { version = "1.14.0", features = ["no_std"] }


[dev-dependencies]
blake3 = { version = "1.0.0", features = ["traits-preview"] }
sha2 = "0.9.5"
sha3 = "0.9.1"
hex = "0.4.3"

[package.metadata.docs.rs]
no-deps = true